#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package Detector
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

==============

Tag: V00-03-85
2016-07-05 Mikhail S. Dubrovin
- det.ndarray_from_image - do not modify input array, return its re-shaped copy

Tag: V00-03-84
2016-07-05 Mikhail S. Dubrovin
- det.ndarray_from_image - return 3d array for 2d detectors if geometry is missing but do_reshape_2d_to_3d is set

Tag: V00-03-83
2016-07-05 Mikhail S. Dubrovin
- det.calib - returns modifiable array in case of returning raw (const) data

Tag: V00-03-82
2016-07-05 Mikhail S. Dubrovin
- reshape Epix100 from (704, 768) to (1, 704, 768) if flag is set

Tag: V00-03-81
2016-07-01 Mikhail S. Dubrovin
- force det.image to return 2-d even for do_reshape_2d_to_3d
- app/det_ndarr_raw_proc - upgrade for intensity auto-limits, options -U,D

Tag: V00-03-80
2016-06-30 Mikhail S. Dubrovin
- update documentation for det.calib for two gain corrections and returning raw (PSAS-139)
- add method do_reshape_2d_to_3d and apply it in _shaped_array_
- update examples
M       examples/ex_all_dets.py
M       src/AreaDetector.py
M       src/PyDetectorAccess.py

Tag: V00-03-79
2016-06-25 Mikhail S. Dubrovin
- AreaDetector.py - det.image returns 2-d arrays w/o geometry (PSAS-139)
- add examples/ex_opal.py

Tag: V00-03-78
2016-06-24 Mikhail S. Dubrovin
- add examples/ex_epix100_cmod.py update ex_cspad_gain_mask.py

Tag: V00-03-77
2016-06-24 Mikhail S. Dubrovin
- Add gain factor and gain_mask in det.calib method (PSAS-139)
M       src/AreaDetector.py
M       src/PyDetectorAccess.py

Tag: V00-03-76
2016-06-21 Mikhail S. Dubrovin
- Add three new parameters to the command line algorithm of Detector.app.det_ndarr_raw_proc (PSAS-6)

Tag: V00-03-75